k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-nginx

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hello-nginx

  template:
    metadata:
      labels:
        app: hello-nginx

    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: persistent-data
              mountPath: /data
      volumes:
        - name: persistent-data
          persistentVolumeClaim:
            claimName: hello-storage
