k8s/11-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: room-booking-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: room-booking-backend

  template:
    metadata:
      labels:
        app: room-booking-backend

    spec:
      containers:
        - name: backend
          image: room-booking-backend:0.1.3
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080
