k8s/16-keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: keycloak

spec:
  replicas: 1

  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
        - name: keycloak

          image: quay.io/keycloak/keycloak:26.7.3

          args:
            - start-dev
            - --import-realm

          ports:
            - containerPort: 8080

          volumeMounts:
            - name: realm-import
              mountPath: /opt/keycloak/data/import
              readOnly: true

          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5

      volumes:
        - name: realm-import
          configMap:
            name: keycloak-realm
