k8s/03-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hello-nginx

spec:
  selector:
    app: hello-nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
