k8s/08-postgres-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres-headless

spec:
  clusterIP: None

  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

---

apiVersion: v1
kind: Service

metadata:
  name: postgres

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432

  type: ClusterIP
