k8s/12-backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend

spec:
  selector:
    app: room-booking-backend # this is our deployment name for the backend pod

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
