k8s/14-keycloak-postgres.yaml
apiVersion: v1
kind: Service

metadata:
  name: keycloak-postgres

spec:
  selector:
    app: keycloak-postgres

  ports:
    - port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: keycloak-postgres

spec:
  serviceName: keycloak-postgres

  replicas: 1

  selector:
    matchLabels:
      app: keycloak-postgres

  template:
    metadata:
      labels:
        app: keycloak-postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: keycloak-postgres-data
              mountPath: /var/lib/postgresql/data

  volumeClaimTemplates:
    - metadata:
        name: keycloak-postgres-data

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 2Gi
