k8s/17-keycloak-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: keycloak

spec:
  selector:
    app: keycloak

  ports:
    - name: http
      port: 8080
      targetPort: 8080

  type: ClusterIP
