k8s/19-frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend

spec:
  selector:
    app: room-booking-frontend

  ports:
    - name: http
      port: 80
      targetPort: 80

  type: ClusterIP
