k8s/20-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: room-booking-gateway

spec:
  gatewayClassName: cloud-provider-kind

  listeners:
    - name: http
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      protocol: HTTPS
      port: 443

      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: room-booking-tls

      allowedRoutes:
        namespaces:
          from: Same
