k8s/21-frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: frontend-route

spec:
  parentRefs:
    - name: room-booking-gateway

  hostnames:
    - "booking.test"

  rules:
    - backendRefs:
        - name: frontend
          port: 80
