k8s/22-backend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: backend-route

spec:
  parentRefs:
    - name: room-booking-gateway

  hostnames:
    - "api.booking.test"

  rules:
    - backendRefs:
        - name: backend
          port: 8080
