k8s/23-keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: keycloak-route

spec:
  parentRefs:
    - name: room-booking-gateway

  hostnames:
    - "auth.booking.test"

  rules:
    - backendRefs:
        - name: keycloak
          port: 8080 # this is the Service port, not the container's targetPort
